# juno-dex

./: .gitignore  ACCESSIBILITY_AUDIT.md  Cargo.toml  GOAL.md  README.md  RELEASE_EVIDENCE.md  TODO.md  UX_AUDIT.md
.github/workflows/: check_artifacts.yml  code_coverage.yml  frontend.yml  release_artifacts.yml  tests_and_checks.yml
audit/: diff-a-deleted-files.txt  diff-a-keep-set-changes.patch  diff-a-modified-or-added-files.txt  diff-b-pool-unpause-types-shim.patch  diff-c-incentives-readd-strip.patch
contracts/pair/: Cargo.toml
contracts/pair/src/: contract.rs  error.rs  state.rs  testing.rs
contracts/pair/tests/: integration.rs
contracts/periphery/oracle/: Cargo.toml
contracts/router/: Cargo.toml
contracts/router/tests/: factory_helper.rs  router_integration.rs
contracts/tokenomics/incentives/: Cargo.toml
contracts/tokenomics/incentives/src/: error.rs  execute.rs  instantiate.rs  migrate.rs  query.rs  reply.rs  state.rs  utils.rs
contracts/whitelist/: Cargo.toml
contracts/whitelist/examples/: whitelist_schema.rs
contracts/whitelist/src/: contract.rs  lib.rs
deployment/: README.md  frontend-release-checklist.md  indexer-performance-benchmark-runbook.md  indexer-staging-backfill-runbook.md  juno-v1-testnet.template.json  operator-tx-checklist.md
deployment/records/: README.md  juno-v1-mainnet-deployment-2026-07-01.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/docs/: a11y-performance.md  ux-review.md
frontend/e2e/: README.md  a11y.spec.ts  dex-flows.spec.ts
frontend/scripts/: check-release-readiness.mjs  codegen.mjs  update-chain-registry-assets.mjs
frontend/src/: main.tsx  polyfills.ts
frontend/src/app/: App.test.tsx  App.tsx  routes.tsx
frontend/src/config/: chains.ts  cosmosKit.ts  deployment.ts  registry.test.ts  registry.ts
frontend/src/data/: chain-registry-assets.juno-1.json  registry.juno-1.json
frontend/src/e2e/: mocks.ts
frontend/src/integration/: exposedAssetExecution.test.ts
frontend/src/lib/: createPool.test.ts  createPool.ts  incentives.test.ts  incentives.ts  risk.test.ts  risk.ts
frontend/src/mutations/: useCreatePoolTx.ts  useIncentivesTx.ts  useProvideLiquidityTx.ts  useSwapTx.ts  useWithdrawLiquidityTx.ts
frontend/src/queries/: useDexRegistry.ts  usePools.ts  useSwapQuote.test.ts  useSwapQuote.ts  useWalletBalances.ts
frontend/src/settings/: SlippageSettingsContext.test.tsx  SlippageSettingsContext.tsx
frontend/src/styles/: theme.css
frontend/src/theme/: junoTheme.ts
frontend/src/tx/: TxHistoryContext.test.tsx  TxHistoryContext.tsx  errors.ts  useTxRunner.test.tsx  useTxRunner.tsx
frontend/src/wallet/: CosmosKitProvider.tsx  WalletContext.tsx  keplr.ts  types.ts
indexer/: .env.example  Dockerfile  README.md  package-lock.json  package.json
indexer/migrations/: 001_init.sql  002_pool_candles.sql  003_api_pricing_readiness.sql  006_candle_jobs.sql  007_bulk_staging.sql  008_read_models.sql  009_juno_stats_derivation.sql
indexer/src/: api-store.ts  api.ts  backfill-candles.ts  backfill-range.ts  benchmark-range.ts  calculations.js  candle-worker.ts  candles.ts  config.ts  db.ts  events.ts  index.ts  metrics.ts  openapi.js  openapi.ts  ranges.ts  read-model-refresher.ts  seed-asset-metadata.ts  server.js  store.js
indexer/test/: api.test.ts  calculations.test.js  candles.test.ts  config.test.ts  db.test.ts  events.test.ts  indexer.test.ts  ranges.test.ts  rpc.test.ts  server.test.js  snapshot-worker.test.ts
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: deploy_sequence.rs  incentives_external_cw20.rs  incentives_external_native.rs  incentives_fake_pair_rejected.rs  incentives_migrate_legacy_config.rs  incentives_setup_pools.rs  incentives_stuck_funds_recovered.rs  multi_hop_routing.rs  paused_via_factory.rs
planning/: 00-overview.md  01-strip-list.md  02-juno-patches.md  03-whitelist-decision.md  04-incentives-types-decision.md  05-toolchain-and-ci.md  07-audit-scope.md  11-incentives-and-gauges.md  12-incentives-strip-decisions.md  38-dex-frontend-from-scratch-architecture-2026-07-01.md  38-frontend-release-bundle-ci-2026-07-02.md  39-dex-frontend-fullbuild-plan-2026-07-02.md  40-indexer-production-readiness-2026-07-03.md  40-operator-first-pool-gate-2026-07-02.md  41-indexer-production-architecture-2026-07-03.md  42-first-pool-smoke-command-helper-2026-07-02.md  43-first-pool-query-evidence-2026-07-03.md  43-indexer-rust-hot-path-decision-2026-07-04.md  44-first-pool-smoke-evidence-validator-2026-07-03.md  45-first-pool-smoke-evidence-strictness-2026-07-03.md  47-first-pool-smoke-denom-match-2026-07-03.md
schemas/astroport-incentives/: astroport-incentives.json
schemas/astroport-incentives/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_pool_info.json  response_to_reward_info.json
schemas/astroport-whitelist/: astroport-whitelist.json
schemas/astroport-whitelist/raw/: execute.json
scripts/: build_juno_v1_first_pool_smoke_commands.py  check_artifacts_size.sh  check_juno_v1_ci_wiring.py  check_juno_v1_deployment_gitignore.py  check_juno_v1_first_pool_smoke_commands.py  check_juno_v1_first_pool_smoke_evidence.py  check_juno_v1_frontend_release_checklist.py  check_juno_v1_operator_checklist.py  fill_juno_v1_deployment_config.py  validate_juno_v1_first_pool_smoke_evidence.py
services/indexer/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
services/indexer/migrations/: 001_init.sql  004_pool_state_source_precedence.sql  005_snapshot_jobs.sql  008_read_models.sql
services/indexer/src/: api-store.ts  api.ts  block-fetcher.ts  config.ts  db.ts  events.ts  index.ts  indexer.ts  migrate.ts  openapi.ts  refresh-read-models.ts  rpc.ts  snapshot-worker.ts
services/indexer/test/: api.test.ts  block-fetcher.test.ts  config.test.ts  db.test.ts  events.test.ts  indexer.test.ts  ranges.test.ts  rpc.test.ts  snapshot-worker.test.ts
skills/juno-dex-trading/: SKILL.md
(+101 files in other folders)
