[workspace]
resolver = "2"
members = [
    "packages/astroport",
    "packages/astroport_juno_types",
    "packages/astroport_test",
    "packages/circular_buffer",
    "contracts/factory",
    "contracts/pair",
    "contracts/router",
    "contracts/whitelist",
    "contracts/periphery/native_coin_registry",
    "contracts/periphery/oracle",
    "contracts/periphery/tokenfactory_tracker",
    "contracts/tokenomics/incentives",
    "integration-tests",
]
# pair_stable, pair_concentrated, and astroport_pcl_common retained in-tree
# but excluded from the workspace; v1.1 / v1.2 re-add targets. See
# planning/01-strip-list.md.
exclude = [
    "contracts/pair_stable",
    "contracts/pair_concentrated",
    "packages/astroport_pcl_common",
]

[workspace.dependencies]
cosmwasm-std = "1.5"
cw-storage-plus = "1.2"
cw2 = "1"
thiserror = "1.0"
itertools = "0.12"
cosmwasm-schema = "1.5"
cw-utils = "1"
astroport = { path = "./packages/astroport", version = "5.11.0" }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true

[patch.'https://github.com/astroport-fi/astroport-core']
astroport = { path = "packages/astroport" }
