[package]
name = "astroport-whitelist"
version = "2.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Astroport"]
edition = "2021"
description = "Proxy contract using a cw1 whitelist of admins. Stripped of Neutron-specific bindings for Juno deployment."
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw1-whitelist = { version = "1.1", features = ["library"] }
cw2 = "1"
cosmwasm-std = { version = "1.5", features = ["stargate"] }
cosmwasm-schema = "1.5"
