[package]
name = "astroport-oracle"
version = "2.1.2"
authors = ["Astroport"]
edition = "2021"
description = "Astroport price oracle contract which works with Astroport pair contracts"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus = "0.15"
thiserror.workspace = true
cw2.workspace = true
cw20 = "0.15"
astroport = "3"
cosmwasm-schema.workspace = true

[dev-dependencies]
# Integration tests for the oracle live in tests/juno_integration.rs at the
# workspace root (added in P3 of the Juno fork plan). They exercise oracle
# against the v1 keep-set (factory + pair + native_coin_registry) without
# requiring pair_stable, which is deferred.
