[package]
name = "astroport-incentives"
version = "1.4.0-juno"
authors = ["Astroport", "Juno"]
edition = "2021"
description = "Astroport Incentives Contract (Juno fork) — distributing rewards to LP stakers"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
cw2.workspace = true
# cw20 stays — load-bearing for cw20-as-reward-token path (Incentivize +
# ClaimRewards). The cw20-as-LP path was stripped in P2.5; see
# planning/11-incentives-and-gauges.md.
cw20 = "1"
cw-utils.workspace = true
astroport.workspace = true
thiserror.workspace = true
itertools.workspace = true

# dev-deps stripped in P2.5:
#   astroport-vesting / astroport-vesting_131 (vesting contract gone;
#     internal rewards paid from this contract's own balance)
#   astro-token-converter (deleted in P0)
#   astroport-pair-stable (deleted in P0)
#   proptest (heavy; integration coverage lives in /workspace/astroport-core/integration-tests)
[dev-dependencies]
anyhow = "1"
astroport-factory = { path = "../../factory" }
astroport-pair = { path = "../../pair" }
astroport-native-coin-registry = { path = "../../periphery/native_coin_registry" }
astroport-test = { path = "../../../packages/astroport_test" }
cw20-base = "1"
